fix(obligations): new function getWithTextNodes
Add new function
`org.eclipse.sw360.licenses.LicenseHandler.getWithTextNodes`
based on
`org.eclipse.sw360.portal.portlets.admin.TodoPortlet#
generateJsonObligationText` which provides the content for Obligation
nodes.

At the same time, add helper endpoints to fetch all ObligationNodes and
ObligationElements which can be used by front-end for various functions.

This commit also reverts changes done by co-author @ritankarsaha

Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>